--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@
 
 body {
     width: 100%;
-    height: 100vh;
     border: none;
     outline: none;
-    background-color: var(--dark-purple);
+    background-color: hsl(254, 72%, 23%);
+    background-image:
+        radial-gradient(at 47% 33%, hsla(0, 60%, 30%, 0.8) 0, transparent 59%),
+        radial-gradient(at 82% 65%, hsl(231, 33%, 46%) 0, transparent 55%);
 }
 
 header {
@@ -80,6 +82,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
+    box-shadow: 0 1px 15px black;
 }
 
 .container div {
@@ -91,11 +94,11 @@ header {
 }
 
 .project-title {
-    margin-top: 35px;
-    font-size: 2.2rem;
-    margin-bottom: 30px;
-    font-weight: 700;
-    color: var(--grey-white);
+    margin-top: 45px;
+    margin-bottom: 45px;
+    font-size: 2.3rem;
+    font-weight:700;
+    color: var(--white);
 }
 
 .projects {
@@ -105,7 +108,7 @@ header {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin-bottom: 65px;
 }
 
 .cards {
@@ -121,13 +124,16 @@ header {
 
 .card {
     width: 350px;
-    height: 350px;
-    border-radius: 30px;
+    height: 300px;
     box-sizing: border-box;
     position: relative;
     margin-right: 20px;
     margin-bottom: 20px;
-    box-shadow: 1px 1px 10px var(--vivid-blue);
+    backdrop-filter: blur(25px) saturate(180%);
+    -webkit-backdrop-filter: blur(25px) saturate(180%);
+    background-color: rgba(14, 97, 232, 0.206);
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .card-description {
@@ -153,12 +159,11 @@ header {
 }
 
 .tag .name {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
 }
 
 .card .top-rectangle {
     height: 85px;
-    background-color: var(--vivid-blue);
     color: var(--white);
     display: flex;
     flex-direction: column;
@@ -229,7 +234,6 @@ h2 {
 .montserrat-high {
     font-size: 2.2rem;
     font-family: "Montserrat", sans-serif;
-    ;
     font-weight: 500;
     color: var(--white);
 }
@@ -239,7 +243,7 @@ h2 {
     font-size: 1.6rem;
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 100;
+    font-weight: 350;
     font-style: normal;
     color: var(--white);
 }
@@ -252,6 +256,7 @@ h2 {
 
     .home-background {
         height: 570px;
+        background-size: auto;
     }
 
     .projects {
@@ -275,18 +280,22 @@ h2 {
         font-size: 1.25rem;
     }
 
-    /* .animation {
-        margin-left: calc(70% - 50%);
-        width: 70%;
-    } */
-
     .contact-button {
         font-size: 0.85rem;
         margin-left: calc(42% - (13rem / 2));
     }
+
+    .card {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .project-title {
+        font-size: 1.3rem;
+    }
 }
 
-@media (min-width: 481px) and (max-width: 900px) {
+@media (min-width: 481px) and (max-width: 899px) {
     .container div {
         margin-top: 30px;
         margin-bottom: -100px;
@@ -294,6 +303,7 @@ h2 {
 
     .home-background {
         height: 640px;
+        background-size: auto;
     }
 
     .projects {
@@ -316,16 +326,55 @@ h2 {
     .contact-button {
         font-size: 0.85rem;
     }
-}
 
-@media (min-width: 900px) {
-    .container div {
-        margin-top: -25px;
+    .card {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 20px;
     }
 
-    /* .projects {
-        margin-top: 225px;
-    } */
+    .project-title {
+        font-size: 1.6rem;
+    }
+}
+
+@media (min-width: 900px) and (max-width: 914px) {
+
+
+    .josefin-sans-variable {
+        font-size: 1.3rem;
+    }
+
+    .home-background {
+        height: 580px;
+    }
+
+    .project-title {
+        margin-top: 110px;
+    }
+
+    h2 {
+        margin-left: calc(43% - (13rem / 2));
+    }
+
+    .contact-button {
+        margin-left: calc(43% - (13rem / 2));
+    }
+}
+
+@media (min-width: 915px) {
+
+    .home-background {
+        height: 540px;
+    }
+
+    .josefin-sans-variable {
+        font-size: 1.3rem;
+    }
+
+    .project-title {
+        margin-top: 60px;
+    }
 
     h2 {
         margin-left: calc(43% - (13rem / 2));
