--- a/style.css
+++ b/style.css
@@ -65,13 +65,6 @@ header {
     background-color: var(--vivid-blue);
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 .home-background {
     width: 100%;
     top: 0;
@@ -85,16 +78,8 @@ header {
     box-shadow: 0 1px 15px black;
 }
 
-.container div {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    flex: 1 1 450px;
-    justify-content: center;
-}
-
 .project-title {
-    margin-top: 45px;
+    margin-top: 80px;
     margin-bottom: 45px;
     font-size: 2.3rem;
     font-weight:700;
@@ -192,9 +177,9 @@ header {
 }
 
 .animation {
+    min-height: 320px;
     max-height: 450px;
-    margin-left: calc(50% - (80% / 2));
-    width: 80%;
+    width: 75%;
     z-index: -1;
 }
 
@@ -207,12 +192,11 @@ header {
     border-radius: 15px;
     font-weight: 700;
     width: 13rem;
+    min-width: 300px;
     margin-top: 20px;
-    margin-left: calc(45% - (13rem / 2));
     color: var(--white);
     background-color: var(--vivid-blue);
     z-index: 1;
-
 }
 
 .contact-button:hover {
@@ -221,166 +205,135 @@ header {
     border-width: 0;
 }
 
-h2 {
-    font-size: 2.5rem;
-    margin-left: calc(45% - (13rem / 2));
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
-.hey {
+.container div {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 370px;
+    justify-content: center;
+    align-items: center;
+}
+
+.container h2 {
+    all: unset;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    border-radius: 15px;
     font-size: 1.2rem;
+    min-width: 370px;
+    margin-top: 10px;
+    color: var(--white);
+    z-index: 1;
+}
+
+.container .hey {
+    font-size: 1.1rem;
     color: var(--white);
 }
 
-.montserrat-high {
-    font-size: 2.2rem;
+.container .montserrat-high {
+    font-size: 1.8rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     color: var(--white);
 }
 
-.josefin-sans-variable {
-    margin-top: 5px;
-    font-size: 1.6rem;
+.container .josefin-sans-variable {
+    font-size: 1.4rem;
     font-family: "Josefin Sans", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 350;
     font-style: normal;
     color: var(--white);
 }
 
-@media (max-width: 480px) {
-    .container div {
-        margin-top: 30px;
-        margin-bottom: -130px;
-    }
-
+@media (max-width: 799px) {
     .home-background {
-        height: 570px;
-        background-size: auto;
+        min-height: 590px;
     }
 
-    .projects {
-        margin-top: 225px;
+    .animation {
+        margin-right: 30px;
     }
 
-    h2 {
-        margin-left: calc(38.75% - (13rem / 2));
-    }
-
-    .hey {
-        font-size: 1rem;
-    }
-
-    .montserrat-high {
-        font-size: 1.4rem;
-        max-width: 80vh;
-    }
-
-    .josefin-sans-variable {
-        font-size: 1.25rem;
-    }
-
-    .contact-button {
-        font-size: 0.85rem;
-        margin-left: calc(42% - (13rem / 2));
-    }
-
-    .card {
-        margin-right: 0;
-        margin-bottom: 20px;
+    .container div {
+        margin-left: 30px;
     }
 
     .project-title {
-        font-size: 1.3rem;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 899px) {
-    .container div {
-        margin-top: 30px;
-        margin-bottom: -100px;
+        margin-top: 35px;
+        margin-bottom: 35px;
+        font-size: 1.5rem;
     }
 
-    .home-background {
-        height: 640px;
-        background-size: auto;
+    .container h2 {
+        font-size: 1.2rem;
+        min-width: 320px;
     }
-
-    .projects {
-        margin-top: 200px;
+    
+    .container .hey {
+        font-size: 1rem;
+        color: var(--white);
     }
-
-    .hey {
+    
+    .container .montserrat-high {
+        font-size: 1.4rem;
+    }
+    
+    .container .josefin-sans-variable {
         font-size: 1.1rem;
     }
 
-    .montserrat-high {
-        font-size: 1.5rem;
-        max-width: 80vh;
-    }
-
-    .josefin-sans-variable {
-        font-size: 1.30rem;
-    }
-
     .contact-button {
-        font-size: 0.85rem;
-    }
-
-    .card {
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 20px;
-    }
-
-    .project-title {
-        font-size: 1.6rem;
+        min-width: 250px;
     }
 }
 
-@media (min-width: 900px) and (max-width: 914px) {
-
-
-    .josefin-sans-variable {
-        font-size: 1.3rem;
+@media (min-width: 800px) and (max-width: 900px) {
+    .home-background {
+        min-height: 450px;
     }
 
-    .home-background {
-        height: 580px;
+    .animation {
+        margin-right: 30px;
+    }
+
+    .container div {
+        margin-left: 30px;
     }
 
     .project-title {
-        margin-top: 110px;
+        margin-top: 70px;
+        margin-bottom: 35px;
+        font-size: 1.8rem;
     }
 
-    h2 {
-        margin-left: calc(43% - (13rem / 2));
+    .container h2 {
+        font-size: 1.2rem;
+        min-width: 320px;
     }
-
-    .contact-button {
-        margin-left: calc(43% - (13rem / 2));
+    
+    .container .hey {
+        font-size: 1rem;
+        color: var(--white);
     }
-}
-
-@media (min-width: 915px) {
-
-    .home-background {
-        height: 540px;
+    
+    .container .montserrat-high {
+        font-size: 1.4rem;
     }
-
-    .josefin-sans-variable {
-        font-size: 1.3rem;
-    }
-
-    .project-title {
-        margin-top: 60px;
-    }
-
-    h2 {
-        margin-left: calc(43% - (13rem / 2));
+    
+    .container .josefin-sans-variable {
+        font-size: 1.1rem;
     }
 
     .contact-button {
-        margin-left: calc(43% - (13rem / 2));
+        min-width: 250px;
     }
 }
