--- a/style.css
+++ b/style.css
@@ -75,14 +75,14 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
-    box-shadow: 0 1px 15px black;
+    box-shadow: 0 1px 50px black;
 }
 
 .project-title {
     margin-top: 80px;
     margin-bottom: 45px;
     font-size: 2.3rem;
-    font-weight:700;
+    font-weight: 700;
     color: var(--white);
 }
 
@@ -261,6 +261,8 @@ header {
 
     .home-background {
         min-height: 570px;
+        background-position: center;
+        background-size: auto;
     }
 
     .animation {
@@ -304,6 +306,8 @@ header {
 
     .home-background {
         min-height: 610px;
+        background-position: center;
+        background-size: auto;
     }
 
     .animation {
